--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
   "author": "Akib Tanjim",
   "license": "ISC",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.10",
     "axios": "^0.18.0",
     "bunyan": "^1.8.12",
     "dotenv": "^5.0.1",
     "koa": "^2.5.0",
-    "koa-body": "^2.5.0",
-    "koa-jwt": "^3.5.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^7.3.0",
     "koa2-cors": "^2.0.6",
     "moment": "^2.22.1",
-    "mysql2": "^1.6.4",
+    "mysql2": "^2.3.3",
+    "puppeteer": "^13.5.1",
+    "random-useragent": "^0.5.0",
     "sequelize": "^4.41.2",
     "useragent": "^2.2.1",
     "uuid": "^3.2.1",
     "validatorjs": "^3.14.2"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node index.js"
   }
