--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "dependencies": {
     "@sequelize/core": "^7.0.0-alpha.10",
+    "aws-sdk": "^2.1103.0",
     "axios": "^0.18.0",
     "bunyan": "^1.8.12",
     "dotenv": "^5.0.1",
