--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^7.3.0",
     "koa2-cors": "^2.0.6",
+    "koa2-ratelimit": "^1.1.0",
     "moment": "^2.22.1",
     "mysql2": "^2.3.3",
     "puppeteer": "^13.5.1",
