--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "validatorjs": "^3.14.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "echo build ongoing"
   }
 }
